# chatterbox-proxy

./: Dockerfile  LICENSE  README.md  adapter.py  audio_filters.py  docker-compose.yml  pyproject.toml  voices.yml
.github/: dependabot.yaml
.github/workflows/: docker-publish.yml
